Fix T77837: Removing addons could cause an exception on Windows.

The cause was that on Windows precompiled libraries were still locked 
by Blender's python instance. Unloading is not possible from python 
side. However, Windows allows to rename / move such locked files. 
Therefore, we now move them 
to a dedicated trash folder, which will be deleted on Blenders startup 
the next time.