source/blender/blenkernel/BKE_addon.h
@@ -51,6 +51,7 @@ struct bAddon *BKE_addon_find(struct ListBase *addon_list, const char *module);
 struct bAddon *BKE_addon_ensure(struct ListBase *addon_list, const char *module);
 bool BKE_addon_remove_safe(struct ListBase *addon_list, const char *module);
 void BKE_addon_free(struct bAddon *addon);
+void BKE_addon_trash_clear(void);
 
 #ifdef __cplusplus
 }
