source/blender/windowmanager/intern/wm_init_exit.c
@@ -235,6 +235,7 @@ void WM_init(bContext *C, int argc, const char **argv)
   GHOST_CreateSystemPaths();
 
   BKE_addon_pref_type_init();
+  BKE_addon_trash_clear();
   BKE_keyconfig_pref_type_init();
 
   wm_operatortype_init();
